<resources>
    <string name="app_name">JAS208U 數位行車記錄器</string>
    <string name="backBtnCover">回上一層</string>
    <string name="homeBtnCover">回主畫面</string>
    <string name="mainMenuBtnCover">主選單</string>
    <string name="upBtnCover">▲</string>
    <string name="downBtnCover">▼</string>
    <string name="confirmBtnCover">確　定</string>
    <string name="printBtnCover">列　印</string>
    <string name="mainWelcomeTV">歡迎使用 JassLin\nJAS280U 數位行車記錄器\n祝您行車平安</string>
    <string name="contentTV1">2023/03/01\n09:41:00\n速度 000.0 km/h\n駕駛FFFFFFF車停</string>
    <string name="contentTV2">主駕駛\nFFFFFFFF 車停中\n共同駕駛\nFFFFFFFF 車停中</string>
    <string name="contentTV3">警告資訊\n(超時駕駛警告)\n(印表機缺紙警告)\n(斷電警告)</string>
    <string name="contentTV4">BUS-ID:------\nHW-ID: HW3.2D\nFW-ID: 1.003\n日期: 20210914</string>
    <string name="contentTV5">GPS 狀態: A\n衛星數: 08\n日期: 2022/03/01\n時間:03:41:38</string>
    <string name="contentTV6">里程 0001159.3 km\nVIN: XXXXXXXXXX\nXXXXXXXXXX</string>
    <string name="contentTV7">GSM CSQ: 27\nAPN: internet\n伺服器 XX 連線\n(伺服器 2 連線)</string>
    <string name="contentTV8">伺服器資訊\nIP Addr: 60.251.157.47\nPort: 8208</string>
    <string name="contentTV9">伺服器資訊2\nIP Addr: 60.251.157.47\nPort: 8208</string>
    <string name="contentMainMenuText1">駕駛設定</string>
    <string name="contentMainMenuText2">列印功能</string>
    <string name="contentMainMenuText3">資料下載</string>
    <string name="contentMainMenuText4">系統參數</string>
    <string name="dsText_Text1">駕駛活動輸入</string>
    <string name="dsText_Text2">駕駛代碼輸入</string>
    <string name="dsText_Text3">駕駛活動顯示</string>
    <string name="dsText_Text4">駕駛人員輸入</string>
    <string name="sText_Text1">目前累計駕駛時間</string>
    <string name="sText_Text2">主駕駛\n 00:00\n共同駕駛\n00:00</string>
    <string name="driver">主駕駛</string>
    <string name="coDriver">共同駕駛</string>
    <string name="inputcode">請輸入代碼</string>
    <string name="inputtime">請輸入時間</string>
    <string name="inputdate">請輸入日期</string>
    <string name="HH">小時</string>
    <string name="value">值</string>
    <string name="manufacturer">捷世林科技\n地址\n車機訊息\n公告\n</string>
    <string name="print1">駕駛活動列印</string>
    <string name="print2">事件事故列印</string>
    <string name="print3">技術資料列印</string>
    <string name="print4">速度曲線圖列印</string>
    <string name="download1">最近24小時下載</string>
    <string name="download2">指定日期下載</string>
    <string name="download3">今日記錄檔下載</string>
    <string name="login_username_hint">請輸入姓名</string>
    <string name="login_password_hint">請輸入密碼</string>
    <string name="login_username_label">姓名: </string>
    <string name="login_password_label">密碼: </string>
    <string name="login_btn">登入</string>
    <string name="canceL_btn">取消</string>
    <string name="login_title">Login</string>
    <string name="confirmButton">Confirm</string>
    <string name="cancelButton">Cancel</string>
    <string name="invalidCredentials">invalid Credentials</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_hint">hint</string>
    <string name="driverstatus0">車停</string>
    <string name="driverstatus1">行駛</string>
    <string name="driverstatus2">代班</string>
    <string name="driverstatus3">休息</string>
    <string name="screenbrightness">亮度調整</string>


    <string-array name="setting_full_txt">
        <item>駕駛活動變更</item>
        <item>駕駛代碼輸入</item>
        <item>目前累計駕駛時間</item>
        <item>駕駛累計代班時間</item>
        <item>駕駛累計休息時間</item>
        <item>列印功能</item>
        <item>資料下載</item>
        <item>連續行駛門檻時間設定</item>
        <item>累計休息門檻時間設定</item>
        <item>車速GAIN值設定</item>
        <item>轉速GAIN值設定</item>
        <item>系統時間設定</item>
        <item>螢幕亮度設定</item>
        <item>車機廠商資料</item>
    </string-array>

    <string-array name="setting_details_txt">
        <item> 主駕駛共同駕駛待班休息</item>
        <item>主駕駛共同駕駛FFFFFFFF</item>
        <item>主駕駛00:00共同駕駛00:00</item>
        <item>主駕駛00:00共同駕駛00:00</item>
        <item>列印中(列印完成)</item>
        <item>列印中(列印完成)</item>
        <item>列印中(列印完成)</item>
        <item>列印中(列印完成)</item>
        <item>列印中(列印完成)</item>
        <item>請輸入下載小時0 ~ 24</item>
        <item>請輸入下載小時0 ~ 24</item>
        <item>請輸入日期2023/04/20</item>
        <item>系統時間設定2023/04/2600:00:00</item>
        <item>連續行使門檻時間設定00:00</item>
        <item>累計休息門檻時間設定00:00</item>
        <item>車速GAIN值設定000</item>
        <item>轉速GAIN值設定000</item>
        <item>螢幕亮度設定ON / OFF</item>
        <item>捷世林科技地址車機訊息公告</item>

    </string-array>

    <string-array name="driver_status">
        <item>車停</item>
        <item>行駛</item>
        <item>待班</item>
        <item>休息</item>
    </string-array>

    <string name="title_activity_display">DisplayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_driving_time">DrivingTimeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>