<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dsText_Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:text="@string/dsText_Text1"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dsText_Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:text="@string/dsText_Text2"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsText_Action" />

    <TextView
        android:id="@+id/dsText_Show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:text="@string/dsText_Text3"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsText_Code" />

    <TextView
        android:id="@+id/dsText_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:text="@string/dsText_Text4"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsText_Show" />


    <Button
        android:id="@+id/backBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/backBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:text="@string/upBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <Button
        android:id="@+id/downBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:text="@string/downBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBtn" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:text="@string/confirmBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downBtn" />

    <Button
        android:id="@+id/printBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:text="@string/printBtnCover"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmBtn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>