<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">


    <FrameLayout
        android:id="@+id/mainFrameLayout"
        android:layout_width="569dp"
        android:layout_height="275dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent
"       app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="10sp">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="170sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:text="@string/mainMenuBtnCover"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/upBtn"
            android:layout_width="170sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:text="@string/upBtnCover"
            android:textSize="30sp" />

        <Button
            android:id="@+id/downBtn"
            android:layout_width="170sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:text="@string/downBtnCover"
            android:textSize="30sp" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="170sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/confirmBtnCover"
            android:textSize="30sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>