<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".third.DrivingTimeFragment">


    <RadioGroup
        android:id="@+id/radioGroupDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/download1RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download1"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/download2RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download2"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/download3RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download3"
            android:textSize="30sp" />


    </RadioGroup>






</androidx.constraintlayout.widget.ConstraintLayout>

