<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third.DrivingTimeActivity">


    <Button
        android:id="@+id/homeBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/mainMenuBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/upBtn"/>

    <Button
        android:id="@+id/upBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/upBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBtn"
        app:layout_constraintBottom_toTopOf="@id/downBtn"/>

    <Button
        android:id="@+id/downBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/downBtnCover"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        app:layout_constraintBottom_toTopOf="@id/confirmBtn"/>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="170sp"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:text="@string/confirmBtnCover"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downBtn" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sText_Text5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>