<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third.DriverCodeFragment">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40sp">

            <TextView
                android:id="@+id/driverTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="203dp"
                android:text="@string/driver"
                android:textSize="30sp"

                />

            <EditText
                android:id="@+id/driverCodeEdt"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:hint="@string/inputcode"></EditText>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/codriverTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="203dp"
                android:text="@string/coDriver"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/codriverCodeEdt"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:hint="@string/inputcode"></EditText>

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>